Init project structure

--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "win",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "backend-interview",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server",
+    "format": "prettier --write --no-error-on-unmatched-pattern src/**/*.{js,ts,tsx,css,json} *.{js,json}",
+    "validate-format": "prettier --check --no-error-on-unmatched-pattern src/**/*.{js,ts,tsx,css,json} *.{js,json}"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
+    "pg": "^8.8.0",
+    "prettier": "^2.8.0"
+  }
 }
